kubernetes/deployment.yaml
## deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  namespace: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
        - name: frontend-app
          image: paulofponciano/kodekloud-webapp-color:latest
          imagePullPolicy: 'Always'
          ports:
            - name: http
              containerPort: 8080
---
## service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
  namespace: my-app
spec:
  selector:
    app: frontend-app
  ports:
    - name: http
      port: 8080
      targetPort: http
